--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     
     <section id="content">
     </section>
-    
+    <input type="text" id="text">
     <footer>
         <button id="newListButton">new</button>
     </footer>
